# customsp

./: .gitignore  API_DOCUMENTATION.md  COMPLETE_GUIDE.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  Dockerfile  FINAL_VERIFICATION_REPORT.md  INTEGRATION_COMPLETE.md  MISSING_FEATURES_ANALYSIS.md  PHASE_1_COMPLETE.md  PHASE_1_FINAL_SUMMARY.md  PHASE_2_COMPLETE.md  QUICK_START.md  README.md  REAL_IMPLEMENTATION_NOTES.md  START_SERVERS.md  docker-compose.yml  render.yaml
backend/: .env.example  Cargo.toml
backend/data/: speedtest.db
backend/examples/: test_ai_insights.rs  test_aim_scoring.rs  test_binary_protocol.rs  test_integration.rs  test_loaded_latency.rs
backend/src/: config.rs  main.rs  models.rs
backend/src/handlers/: download.rs  enhanced_test.rs  health.rs  mod.rs  servers.rs  test.rs
backend/src/services/: ai_insights.rs  aim_scoring.rs  binary_protocol.rs  consistency.rs  database.rs  loaded_latency.rs  measurement.rs  mod.rs  packet_loss.rs  real_measurement.rs
docs/: AIM_SCORING.md  AI_INSIGHTS.md  BINARY_PROTOCOL.md  LOADED_LATENCY.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AIInsightsPanel.tsx  AIMScoreCard.tsx  BufferbloatCard.tsx  DarkModeToggle.tsx  ExportResults.tsx  ProgressOverlay.tsx  ServerSelector.tsx  ShareResults.tsx  SpeedGauge.tsx  TestHistory.tsx
frontend/src/hooks/: useSpeedTest.ts
frontend/src/types/: index.ts
