[package]
name = "speedtest-pro-backend"
version = "1.0.0"
edition = "2021"
authors = ["SpeedTestPro Team"]
description = "High-performance internet speed test backend in Rust"

[dependencies]
# Web framework
actix-web = "4"
actix-ws = "0.2"
actix-cors = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack - binary serialization
bincode = "1.3"     # Alternative binary format

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
once_cell = "1.19"

# Statistics and metrics
statistical = "1.0"

# Networking
bytes = "1.5"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# AI Integration
async-openai = "0.18"

# System information
sysinfo = "0.30"

# Random data generation
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[features]
default = []
single-server = []
